--- a/client/src/components/styles/createActivity.module.css
+++ b/client/src/components/styles/createActivity.module.css
@@ -52,6 +52,8 @@
 
 .nameToSeasons input {
     width: 310px;
+    height: 30px;
+    font-size: 20px;
     border-radius: 15px;
 }
 
@@ -97,6 +99,12 @@
     margin-top: 20px;
 }
 
+.countries label{
+    z-index: 1 !important;
+    margin-right: 50px;
+}
+
+
 .seasonsItems {
     display: grid;
     grid-template-columns: 1em auto;
@@ -132,8 +140,7 @@
     text-align: center;
     width: 100px;
     margin-bottom: 5px;
-    margin-left: 15px;
-    border: 1px solid rgb(255, 255, 255);
+    margin-left: 30px;
 }
 
 .button {
@@ -150,6 +157,7 @@
     margin-top: 10px;
     margin-bottom: 20px;
     cursor: pointer;
+    z-index: 9;
 }
 
 .button:hover {
